examples/test/testpolicy782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy782
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key8: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value1
          key4: value17
          key24: value40
      podSelector:
        matchLabels:
          key11: value47
          key31: value18
          key46: value33
